overlap fixed!

--- a/main.css
+++ b/main.css
@@ -15,6 +15,16 @@ html, body {
 
 .navbar {
     height: 80px;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+
+    position: fixed !important;
+    width: 100%;
+    z-index: 1;
 }
 
 .container-fluid {
@@ -40,7 +50,7 @@ html, body {
 }
 
 .hero {
-   height: 100vh;
+   height: 110vh;
    /* width: 866.85px;
     height: 1136.96px; */
 }
